--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -60,5 +60,7 @@ ion-grid {
     padding: 5px !important;
   }
 
-
+  .bottom {
+    bottom: 30px !important; /* Moves the fab buttons slightly up */
+  }
 
