--- a/src/app/canvas/canvas.component.scss
+++ b/src/app/canvas/canvas.component.scss
@@ -6,21 +6,14 @@ ion-fab-button {
   --background: yellow !important;
   --color: black
 }
-
-// map
-  #map{
-    width:100%;
-    height: 100%;
-  }
-
 // data & plots
-/*  .canvas {
+  .canvas {
     text-align: center;
     margin-left: 0;
     margin-right: 0;
     margin-top: 10px;
     padding: 0;
-  } */
+  }
 
   .title {
     font-size: 15px;
@@ -47,19 +40,6 @@ ion-fab-button {
   .element {
     width: 100%;
     height: 55vh;
-  }
-
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  .fade-in {
-    animation: fadeIn 0.5s ease-in-out;
   }
 
   table {
@@ -99,6 +79,3 @@ ion-fab-button {
     background-color: white;
   }
 
-  .bottom {
-    bottom: 30px !important; /* Moves the fab buttons slightly up */
-  }
