--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,4 +1,3 @@
-<ion-content>
 
   <!-- buttons to select start / stop recording or save track -->
 
@@ -30,158 +29,23 @@
     </ion-row>
   </ion-fab>
 
+  <ion-content>
+    <div id="map" class="map-container"></div>
+  </ion-content>
+
+  <!-- Navigation buttons -->
   <ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom">
     <ion-row>
-      <ion-fab-button id='databutton' (click)="gotoData()">
+      <ion-fab-button (click)="fs.gotoPage('canvas')">
         <ion-icon name="analytics"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button id='mapbutton' (click)="gotoMap()">
-        <ion-icon name="earth"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button id='list' (click)="gotoPage('tab2')">
+      <ion-fab-button (click)="fs.gotoPage('tab2')">
         <ion-icon name="list"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button id='settings' (click)="gotoPage('tab3')">
+      <ion-fab-button (click)="fs.gotoPage('tab3')">
         <ion-icon name="settings"></ion-icon>
       </ion-fab-button>
     </ion-row>
   </ion-fab>
 
-<div id="map" class="map-container"></div>
-
-<swiper-container id="data">
-
-  <swiper-slide [hidden]="!currentTrack">
-
-    <div class='empty'></div>
-
-    <div class='element card'>
-      <table *ngIf="currentTrack">
-        <tr [ngClass]="status">
-          <td colspan='2'>{{curTitle}}</td>
-        </tr>
-        <tr>
-          <td>{{distance}}</td>
-          <td >{{currentTrack.features[0].properties.totalDistance | number:'1.3' }} km</td>
-        </tr>
-        <tr>
-          <td>{{eGain}}</td>
-          <td>{{currentTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m</td>
-        </tr>
-        <tr>
-          <td>{{eLoss}}</td>
-          <td>{{currentTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m</td>
-        </tr>
-        <tr>
-          <td>{{time}}</td>
-          <td>{{currentTrack.features[0].properties.totalTime}}</td>
-        </tr>
-        <tr>
-          <td>{{motionTime}}</td>
-          <td>{{ currentMotionTime }}</td>
-        </tr>
-        <tr>
-          <td>{{points}}</td>
-          <td>{{currentTrack.features[0].properties.totalNumber}}</td>
-        </tr>
-        <tr>
-          <td>{{altitude}}</td>
-          <td *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">
-            {{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</td>
-        </tr>
-        <tr>
-          <td>{{speed}}</td>
-          <td>
-            <div *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">
-              {{ currentTrack.features[0].properties.currentSpeed | number:'1.1-1' }} km/h
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>{{avgSpeed}}</td>
-          <td>
-            <div *ngIf="currentAverageSpeed != undefined">
-              {{currentAverageSpeed | number:'1.1-1'}} km/h
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>{{motionAvgSpeed}}</td>
-          <td>
-            <div *ngIf="currentMotionSpeed != undefined">
-              {{currentMotionSpeed | number:'1.1-1'}} km/h
-            </div>
-          </td>
-        </tr>
-      </table>
-    </div>
-
-    <div class='element' id='cc0'>
-      <h1 class='title'>{{canvasAltitude}}</h1>
-      <canvas class='canvas' id="currentCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-    </div>
-
-    <div class='element' id='cc1'>
-      <h1 class='title'>{{canvasSpeed}} ({{currentUnit}})</h1>
-      <canvas class='canvas' id="currentCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-    </div>
-  </swiper-slide>
-
-  <swiper-slide [hidden]="!archivedTrack || layerVisibility != 'archived'">
-
-    <div class='empty'></div>
-
-    <div class='element card'>
-      <table *ngIf="archivedTrack">
-        <tr>
-          <td colspan='2'>{{arcTitle}}</td>
-        </tr>
-        <tr>
-          <td colspan='2'>{{archivedTrack.features[0].properties.name}}</td>
-        </tr>
-        <tr>
-          <td>{{distance}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalDistance > -1">
-            {{archivedTrack.features[0].properties.totalDistance | number:'1.3'}} km
-          </td>
-        </tr>
-        <tr>
-          <td>{{eGain}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalElevationGain > -1">
-            {{archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0'}} m
-          </td>
-        </tr>
-        <tr>
-          <td>{{eLoss}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalElevationLoss > -1">
-            {{archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0'}} m
-          </td>
-        </tr>
-        <tr>
-          <td>{{time}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalTime !== undefined">
-            {{archivedTrack.features[0].properties.totalTime}}
-          </td>
-        </tr>
-        <tr>
-          <td>{{points}}</td>
-          <td>{{archivedTrack.features[0].properties.totalNumber}}</td>
-        </tr>
-      </table>
-    </div>
-
-    <div class='element' id='ac0'>
-      <h1 class='title'>{{canvasAltitude}}</h1>
-      <canvas class='canvas' id="archivedCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-    </div>
-
-    <div class='element' id='ac1'>
-      <h1 class='title'>{{canvasSpeed}} ({{archivedUnit}})</h1>
-      <canvas class='canvas' id="archivedCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-    </div>
-
-  </swiper-slide>
-</swiper-container>
-
-</ion-content>
 
