--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -62,27 +62,17 @@ div{
   }
 }
 
-// buttons
-/*
-.redEnabled{
-    --background: red;
-    --color: white;
+.empty {
+  width: 100%;
+  height: 12vh;
 }
 
-.redDisabled{
-    --background: gray;
+ion-fab-button {
+  --background: rgb(255, 221, 221) !important;
+  --color: black
 }
 
-.greenEnabled{
-    --background: rgb(0, 255, 0);
-    --color: black;
+.bottom {
+  bottom: 30px !important; /* Moves the fab buttons slightly up */
 }
 
-.greenDisabled{
-    --background: gray;
-}
-
-.move-up {
-    padding-bottom: 20px;
-  }
-*/
