--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -3,7 +3,7 @@ ion-icon {
 }
 
 ion-fab-button {
-  --background: yellow !important;
+  --background: #45ff2f !important;
   --color: black
 }
 
@@ -12,15 +12,6 @@ ion-fab-button {
     width:100%;
     height: 100%;
   }
-
-// data & plots
-/*  .canvas {
-    text-align: center;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 10px;
-    padding: 0;
-  } */
 
   .title {
     font-size: 15px;
