--- a/src/global.scss
+++ b/src/global.scss
@@ -35,8 +35,8 @@
     .alert-title {
       font-size: 20;
       color: black;
-    }   
-    .alert-button{  
+    }
+    .alert-button{
       width: 200px;
       border-radius: 2px;
       color: green;
@@ -49,7 +49,7 @@
     .alert-label {
       font-size: 16px;
       font-weight: bold;
-      margin-bottom: 4px;  
+      margin-bottom: 4px;
     }
     .alert-wrapper ion-input,
     .alert-wrapper ion-textarea {
@@ -67,7 +67,7 @@
         font-size: 16px;
       }
     }
-    .alert-cancel-button{  
+    .alert-cancel-button{
         width: 200px;
         border-radius: 2px;
         color: red;
@@ -92,22 +92,22 @@
         border-radius: 4px; /* Add rounded corners */
         //padding: 4px; /* Optional spacing */
       }
-    
+
       [aria-checked="true"] .alert-radio-icon {
         border-color: inherit !important;
         background: inherit !important;
       }
-    
+
       [aria-checked="true"] .alert-radio-inner {
         background-color: var(--radio-color) !important;
         transition: none !important; /* Remove transition to avoid flicker */
       }
-    
+
       /* Ensure default state has no blue */
       .alert-radio-inner {
         background-color: transparent !important; /* Transparent background for unselected */
         transition: none !important; /* Prevent transition to blue */
-      }    
+      }
       /* Divider lines for the radio group */
       .alert-radio-group {
         border-top: 1px solid black !important; /* Top divider line */
@@ -134,22 +134,18 @@
 
     }
 
-// YELLOWALERT ////////////////////////////////////
-    .yellowAlert{
-      --background: #ffffbb !important;
+// GREENISH ALERT ////////////////////////////////////
+    .greenishAlert{
+      --background: #a8ff9f !important;
     }
 
-// YELLOWALERT ////////////////////////////////////
+// RED ALERT ////////////////////////////////////
   .redAlert{
     --background: #ffbbbb !important;
   }
 
-// GREENALERT ////////////////////////////////////
-    .greenAlert{
-      --background: #ddffdd !important;
-    }
 
-// PRIMARY ALERT //////////////////////////////////    
+// PRIMARY ALERT //////////////////////////////////
     .primaryAlert {
       --background: #aac6f7 !important;
     }
@@ -270,7 +266,7 @@
   width: 100%;
   box-shadow: none; /* Remove shadow */
   border: none; /* Remove borders */
-}  
+}
 
 /* Modal buttons */
 .modal-buttons {
@@ -287,7 +283,7 @@
   color: green;
   font-size: 18px;
 }
-  
+
 /* Cancel button */
 .modal-cancel-button {
   color: red;
@@ -324,5 +320,5 @@
 }
 
 .padded-list {
-  padding: 0 5px !important; 
+  padding: 0 5px !important;
 }
