--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -72,7 +72,7 @@ ion-fab-button {
   --color: black
 }
 
-.bottom {
-  bottom: 30px !important; /* Moves the fab buttons slightly up */
+.custom-content {
+  padding: 16px; // or whatever padding you want for the scrollable area
+  --padding-bottom: 0; // prevent Ionics default bottom padding
 }
-
