--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -30,22 +30,31 @@
   </ion-fab>
 
   <ion-content>
-    <div id="map" class="map-container"></div>
+    <div id="map"></div>
   </ion-content>
 
+  <!-- space for android controls -->
+  <div class="bottom-safe-gray"></div>
+
   <!-- Navigation buttons -->
-  <ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom">
-    <ion-row>
-      <ion-fab-button (click)="fs.gotoPage('canvas')">
-        <ion-icon name="analytics"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="fs.gotoPage('tab2')">
-        <ion-icon name="list"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="fs.gotoPage('tab3')">
-        <ion-icon name="settings"></ion-icon>
-      </ion-fab-button>
-    </ion-row>
-  </ion-fab>
+    <ion-fab
+      slot="fixed"
+      horizontal="center"
+      vertical="bottom"
+      class="bottom-safe"
+    >
+      <ion-row>
+        <ion-fab-button (click)="fs.gotoPage('canvas')">
+          <ion-icon name="analytics"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button (click)="fs.gotoPage('tab2')">
+          <ion-icon name="list"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button (click)="fs.gotoPage('tab3')">
+          <ion-icon name="settings"></ion-icon>
+        </ion-fab-button>
+      </ion-row>
+    </ion-fab>
+
 
 
