--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="custom-content">
   <div class="ion-content-scroll-host">
     <ion-list>
       <ion-item *ngFor="let item of collection">
@@ -44,8 +44,16 @@
   <ion-content id="main-content"></ion-content>
 </ion-content>
 
+<!-- space for android controls -->
+<div class="bottom-safe-gray"></div>
+
   <!-- Navigation buttons -->
-  <ion-fab slot="fixed" horizontal="center" class="bottom" vertical="boittom">
+  <ion-fab
+    slot="fixed"
+    horizontal="center"
+    vertical="bottom"
+    class="bottom-safe"
+  >
     <ion-row>
       <ion-fab-button (click)="fs.gotoPage('tab1')">
         <ion-icon name="earth"></ion-icon>
