--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -60,7 +60,34 @@ ion-grid {
     padding: 5px !important;
   }
 
-  .bottom {
-    bottom: 30px !important; /* Moves the fab buttons slightly up */
+  .language-selector {
+    margin-top: 70px;
+  }
+  
+  .map-selector {
+    margin-top: 0px;
   }
 
+  .color-display {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    padding-left: 4px;
+  }
+  
+  .color-line {
+    width: 50px;
+    height: 5px;
+    background-color: gray;
+    border-radius: 2px;
+  }
+  
+  .triangle {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 6px solid #444; /* or use 'darkgrey' or '#333' */
+    margin-top: 2px;
+  }
+  
