--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -52,6 +52,21 @@
   </ion-button>
 </ion-item>
 
+<!-- Altitude method selector -->
+<ion-item lines="none" class="selector">
+  <ion-label>{{title[7][selectedLanguage.index]}}</ion-label>
+  <ion-select
+    [value]="selectedAltitude"
+    (ionChange)="onAltitudeChange($event.detail.value)"
+    interface="popover"
+    slot="end"
+  >
+    <ion-select-option *ngFor="let altitude of altitudes" [value]="altitude">
+      {{ altitude }}
+    </ion-select-option>
+  </ion-select>
+</ion-item>
+
 <!-- Upload offline maps -->
 <ion-item lines="none" class="selector">
   <ion-label>{{title[5][selectedLanguage.index]}}</ion-label>
@@ -82,13 +97,13 @@
   </ion-select>
 </ion-item>
 
-</ion-content>
+  <!-- 🔹 Show progress bar only when downloading -->
+  <ng-container *ngIf="isDownloading">
+    <ion-progress-bar [value]="downloadProgress / 100"></ion-progress-bar>
+    <p>{{ downloadProgress }}% downloaded</p>
+  </ng-container>
 
-    <!-- 🔹 Show progress bar only when downloading -->
-    <ng-container *ngIf="isDownloading">
-      <ion-progress-bar [value]="downloadProgress / 100"></ion-progress-bar>
-      <p>{{ downloadProgress }}% downloaded</p>
-    </ng-container>
+</ion-content>
 
   <!-- space for android controls -->
   <div class="bottom-safe-gray"></div>
