to update to angular 20

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -159,10 +159,10 @@
       <ion-fab-button (click)="fs.gotoPage('tab1')">
         <ion-icon name="earth"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button id='list' (click)="fs.gotoPage('tab2')">
+      <ion-fab-button id='list' (click)="fs.gotoPage('archive')">
         <ion-icon name="list"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button id='settings' (click)="fs.gotoPage('tab3')">
+      <ion-fab-button id='settings' (click)="fs.gotoPage('settings')">
         <ion-icon name="settings"></ion-icon>
       </ion-fab-button>
     </ion-row>
