--- a/src/app/archive/archive.page.html
+++ b/src/app/archive/archive.page.html
@@ -61,7 +61,7 @@
       <ion-fab-button (click)="fs.gotoPage('canvas')">
         <ion-icon name="analytics"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button (click)="fs.gotoPage('tab3')">
+      <ion-fab-button (click)="fs.gotoPage('settings')">
         <ion-icon name="settings"></ion-icon>
       </ion-fab-button>
     </ion-row>
