--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -47,10 +47,10 @@
         <ion-fab-button (click)="fs.gotoPage('canvas')">
           <ion-icon name="analytics"></ion-icon>
         </ion-fab-button>
-        <ion-fab-button (click)="fs.gotoPage('tab2')">
+        <ion-fab-button (click)="fs.gotoPage('archive')">
           <ion-icon name="list"></ion-icon>
         </ion-fab-button>
-        <ion-fab-button (click)="fs.gotoPage('tab3')">
+        <ion-fab-button (click)="fs.gotoPage('settings')">
           <ion-icon name="settings"></ion-icon>
         </ion-fab-button>
       </ion-row>
