--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -10,39 +10,39 @@
     <div class='elementData card' [hidden]="!currentTrack || currentTrack.features[0].geometry.coordinates.length < 2">
       <table *ngIf="currentTrack">
         <tr [ngClass]="status">
-          <td colspan='2'>{{curTitle[languageIndex]}}</td>
+          <td colspan='2'>{{'CANVAS.CURFILE' | translate}}</td>
         </tr>
         <tr>
-          <td>{{distance[languageIndex]}}</td>
+          <td>{{'CANVAS.DISTANCE' | translate}}</td>
           <td >{{currentTrack.features[0].properties.totalDistance | number:'1.3' }} km</td>
         </tr>
         <tr>
-          <td>{{eGain[languageIndex]}}</td>
+          <td>{{'CANVAS.EGAIN' | translate}}</td>
           <td>{{currentTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m</td>
         </tr>
         <tr>
-          <td>{{eLoss[languageIndex]}}</td>
+          <td>{{'CANVAS.ELOSS' | translate}}</td>
           <td>{{currentTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m</td>
         </tr>
         <tr>
-          <td>{{time[languageIndex]}}</td>
+          <td>{{'CANVAS.TIME' | translate}}</td>
           <td>{{currentTrack.features[0].properties.totalTime}}</td>
         </tr>
         <tr>
-          <td>{{motionTime[languageIndex]}}</td>
+          <td>{{'CANVAS.MOTIONTIME' | translate }}</td>
           <td>{{ currentMotionTime }}</td>
         </tr>
         <tr>
-          <td>{{points[languageIndex]}}</td>
+          <td>{{'CANVAS.POINTS' | translate}}</td>
           <td>{{currentTrack.features[0].properties.totalNumber}}</td>
         </tr>
         <tr>
-          <td>{{altitude[languageIndex]}}</td>
+          <td>{{'CANVAS.ALTITUDE' | translate}}</td>
           <td *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">
             {{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</td>
         </tr>
         <tr>
-          <td>{{speed[languageIndex]}}</td>
+          <td>{{'CANVAS.SPEED' | translate}}</td>
           <td>
             <div *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">
               {{ currentTrack.features[0].properties.currentSpeed | number:'1.1-1' }} km/h
@@ -50,7 +50,7 @@
           </td>
         </tr>
         <tr>
-          <td>{{avgSpeed[languageIndex]}}</td>
+          <td>{{'CANVAS.AVGSPEED' | translate}}</td>
           <td>
             <div *ngIf="currentAverageSpeed != undefined">
               {{currentAverageSpeed | number:'1.1-1'}} km/h
@@ -58,7 +58,7 @@
           </td>
         </tr>
         <tr>
-          <td>{{motionAvgSpeed[languageIndex]}}</td>
+          <td>{{'CANVAS.MOTIONAVGSPEED' | translate}}</td>
           <td>
             <div *ngIf="currentMotionSpeed != undefined">
               {{currentMotionSpeed | number:'1.1-1'}} km/h
@@ -69,12 +69,12 @@
     </div>
 
     <div class='elementCanvas' id='cc0' [hidden]="!currentTrack || currentTrack.features[0].geometry.coordinates.length < 2">
-      <h1 class='title'>{{canvasAltitude[languageIndex]}}</h1>
+      <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
       <canvas class='canvas' id="currCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
     </div>
 
     <div class='elementCanvas' id='cc1' [hidden]="!currentTrack || currentTrack.features[0].geometry.coordinates.length < 2">
-      <h1 class='title'>{{canvasSpeed[languageIndex]}} ({{currentUnit}})</h1>
+      <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{currentUnit}})</h1>
       <canvas class='canvas' id="currCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
     </div>
 
@@ -91,49 +91,49 @@
     <div class='elementData card' [hidden]="!archivedTrack || layerVisibility != 'archived'">
       <table *ngIf="archivedTrack">
         <tr>
-          <td colspan='2'>{{arcTitle[languageIndex]}}</td>
+          <td colspan='2'>{{'CANVAS.ARCTITLE' | translate}}</td>
         </tr>
         <tr>
           <td colspan='2'>{{archivedTrack.features[0].properties.name}}</td>
         </tr>
         <tr>
-          <td>{{distance[languageIndex]}}</td>
+          <td>{{'CANVAS.DISTANCE' | translate}}</td>
           <td *ngIf="archivedTrack.features[0].properties.totalDistance > -1">
             {{archivedTrack.features[0].properties.totalDistance | number:'1.3'}} km
           </td>
         </tr>
         <tr>
-          <td>{{eGain[languageIndex]}}</td>
+          <td>{{'CANVAS.EGAIN' | translate}}</td>
           <td *ngIf="archivedTrack.features[0].properties.totalElevationGain > -1">
             {{archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0'}} m
           </td>
         </tr>
         <tr>
-          <td>{{eLoss[languageIndex]}}</td>
+          <td>{{'CANVAS.ELOSS' | translate}}</td>
           <td *ngIf="archivedTrack.features[0].properties.totalElevationLoss > -1">
             {{archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0'}} m
           </td>
         </tr>
         <tr>
-          <td>{{time[languageIndex]}}</td>
+          <td>{{'CANVAS.TIME' | translate}}</td>
           <td *ngIf="archivedTrack.features[0].properties.totalTime !== undefined">
             {{archivedTrack.features[0].properties.totalTime}}
           </td>
         </tr>
         <tr>
-          <td>{{points[languageIndex]}}</td>
+          <td>{{'CANVAS.POINTS' | translate}}</td>
           <td>{{archivedTrack.features[0].properties.totalNumber}}</td>
         </tr>
       </table>
     </div>
 
     <div class='elementCanvas' id='ac0' [hidden]="!archivedTrack || layerVisibility != 'archived'">
-      <h1 class='title'>{{canvasAltitude[languageIndex]}}</h1>
+      <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
       <canvas class='canvas' id="archCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
     </div>
 
     <div class='elementCanvas' id='ac1' [hidden]="!archivedTrack || layerVisibility != 'archived'">
-      <h1 class='title'>{{canvasSpeed[languageIndex]}} ({{archivedUnit}})</h1>
+      <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{archivedUnit}})</h1>
       <canvas class='canvas' id="archCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
     </div>
 
