--- a/src/app/wpt-modal/wpt-modal.component.html
+++ b/src/app/wpt-modal/wpt-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header class="modal-header">
   <div class="modal-title" *ngIf="edit">
-    <strong>{{ header }}</strong>
+    <strong>{{ 'WPT_HEADER' | translate }}</strong>
   </div>
 
   <div class="modal-title" *ngIf="!edit">
@@ -13,13 +13,13 @@
 
 <ion-content class="modal-content">
   <div class="modal-message" *ngIf="showAltitude">
-    <strong>{{ altitude }}: </strong>{{ wptEdit.altitude | number: '1.1-1' }} m
+    <strong>{{ 'WPT_ALTITUDE' | translate }}: </strong>{{ wptEdit.altitude | number: '1.1-1' }} m
   </div>
 
   <div class="modal-message" *ngIf="edit">
-    <strong>{{ name }}:</strong>
+    <strong>{{ 'WPT_NAME' | translate }}:</strong>
   </div>
-  
+
   <div *ngIf="edit"
     class="modal-name white"
     contenteditable="true"
@@ -29,9 +29,9 @@
   </div>
 
   <div class="modal-message">
-    <strong>{{ comment }}:</strong>
+    <strong>{{ 'WPT_COMMENT' | translate }}:</strong>
   </div>
-  
+
   <div *ngIf="edit"
     class="modal-description white"
     overFlow="hidden"
@@ -46,7 +46,7 @@
     overFlow="hidden"
     contenteditable="false"
     aria-label="Non-editable message section"
-    [innerHTML]="wptEdit.comment">    
+    [innerHTML]="wptEdit.comment">
   </div>
 
 </ion-content>
@@ -58,10 +58,10 @@
     <ion-button slot:end class="modal-cancel-button" (click)="dismissWithAction('cancel')">{{cancel}}</ion-button>
   </ion-buttons>
 
-  <ion-button 
-  (click)="toggleEdit()" 
-  *ngIf="!edit" 
-  fill="clear" 
+  <ion-button
+  (click)="toggleEdit()"
+  *ngIf="!edit"
+  fill="clear"
   class="modal-edit-button">
   <ion-icon name="create" class="modal-large-icon"></ion-icon>
 </ion-button>
