--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -7,19 +7,27 @@ ion-fab-button {
   --color: black
 }
 
-// map
-  #map{
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-    
-      /* Prevent map from overlapping Android navigation bar */
-      padding-bottom: env(safe-area-inset-bottom);
-      box-sizing: border-box;
-  }
-    
+#map-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+
+  /* Set the transform origin to top left */
+  transform-origin: center;
+
+  /* Apply a default scale (1 = 100%) */
+  transform: scale(1);
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+  padding-bottom: env(safe-area-inset-bottom);
+  box-sizing: border-box;
+}
 
   .title {
     font-size: 15px;
